--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
       { "src": "mcp_server.py", "use": "@vercel/python" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "api.py" }
+      { "src": "/(.*)", "dest": "mcp_server.py" }
     ]
   }
